// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Nothing component should match snapshot with default behaviour 1`] = `
<div
  className="home_last_mssg"
  style={
    Object {
      "border": "",
    }
  }
>
  <img
    src="/images/large.jpg"
  />
  <span
    className="nothingMssg"
  >
    Hello, a message for you!!
  </span>
  <span
    className="secondMssg"
  >
    
  </span>
</div>
`;

exports[`Nothing component should match snapshot with elaphant image & a descriptive message 1`] = `
<div
  className="home_last_mssg"
  style={
    Object {
      "border": "",
    }
  }
>
  <img
    src="/images/elephant-march.png"
  />
  <span
    className="nothingMssg"
  >
    No users to explore!!
  </span>
  <span
    className="secondMssg"
  >
    A descriptive second message
  </span>
</div>
`;

exports[`Nothing component should return component only with an image (used by modals) 1`] = `
<div
  className="home_last_mssg"
  style={
    Object {
      "border": "none",
    }
  }
>
  <img
    src="/images/large.jpg"
  />
  <span
    className="secondMssg"
  >
    
  </span>
</div>
`;
